eks/eks-with-module-17.11/examples-deployments/deployment-without-istio.yaml
# ##################################################################################################
# # Test App
# ##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
  labels:
    service: test-app-svc
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-v1
  labels:
    app: test-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
      version: v1
  template:
    metadata:
      labels:
        app: test-app
        version: v1
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: test-app
          image: 779882487479.dkr.ecr.us-east-1.amazonaws.com/test-secrets:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
