eks/eks-with-module-17.11/examples-deployments/deployment.yaml
# apiVersion: elbv2.k8s.aws/v1beta1
# kind: TargetGroupBinding
# metadata:
#   name: my-tgb-80-nlb
#   namespace: istio-system
# spec:
#   serviceRef:
#     name: istio-ingressgateway # route traffic to the awesome-service
#     port: 80         
#   targetGroupARN: arn:aws:elasticloadbalancing:us-east-1:779882487479:targetgroup/testing-istio-80-31381/e97fd8e07443027c
#   targetType: instance
#   networking:
#     ingress:
#     - from:
#       - ipBlock:
#           cidr: 0.0.0.0/0 # subnet-1 cidr
#       ports:
#       - protocol: TCP # Allow all TCP traffic from ALB SG    
#         port: 31381
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
#     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#     proxy.istio.io/config: '{"gatewayTopology" : { "numTrustedProxies": 2 } }'
#   labels:
#     app: istio-ingressgateway
#     istio: ingressgateway
#     release: istio
#   name: istio-ingressgateway
# ---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend-eks-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# ##################################################################################################
# # Test App
# ##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
  labels:
    service: test-app-svc
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-v1
  labels:
    app: test-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
      version: v1
  template:
    metadata:
      labels:
        app: test-app
        version: v1
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: test-app
          image: 779882487479.dkr.ecr.us-east-1.amazonaws.com/test-secrets:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: teste-vs
spec:
  hosts:
  - "*"
  gateways:
  - backend-eks-gateway
  http:
  - match:
    - uri:
        prefix: /test/
    route:
    - destination:
        host: test-app-svc
        port:
          number: 8080
